--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+howdy (2.6.1-1) xenial; urgency=medium
+
+  * Fix up v2.6.1 to run on Ubuntu 24.04
+
+ -- thecalamityjoe87 <calamityjoe87@gmail.com>  Wed, 17 Aug 2024 18:00:00 -0600
+
 howdy (2.6.1) xenial; urgency=medium
 
   * Fixed accidentally using emergency priority for log messages (thanks @kageurufu and many others!)
